# monkey

./: .gitignore  PLAN.md  README.md  pyproject.toml  requirements_dev.txt  setup.cfg
examples/: compile.py  compile_and_run_vm.py  display_bytecode.py  execute.py  prog.pickle  sample.monkey  sample.monkeybyte  sample2.monkey  sample2.monkeybyte
notes/01-lexing/: 00-intro.md  01-multi-char-operators.md
notes/02-parsing/: 00-intro.md  01-parsing-expressions.md  02-expressions-in-monkey.md  03-terminology.md  04-pratt-parser.md
notes/03-evaluation/: 00-intro.md  01-tree-walking-interpreter.md
notes/04-compilers-and-virtual-machines/: 00-intro.md  01-source-to-machine-code.md  03-virtual-vs-real-machines.md  04-real-machines.md  05-stack-vs-register-machines.md  06-bytecode.md  X00-memory-vs-mass-storage.md
notes/05-hello-bytecode/: 00-constant-expressions.md
notes/06-conditionals/: 00-intro.md  01-jumps.md
notes/07-keeping-track-of-names/: 00-intro.md
notes/08-string-array-hash/: 00-intro.md
notes/09-functions/: 00-intro.md  01-opcodes.md  02-function-calls.md  03-frames.md  04-bindings.md  05-bindings-in-vm.md  06-arguments.md
notes/10-builtin-functions/: 00-intro.md
repl/: repl.py
tests/: compiler_utils.py  object_utils.py  test_builtins.py  test_compilation_scope.py  test_compiler.py  test_environment.py  test_evaluator.py  test_expression.py  test_fixed_stack.py  test_hash.py  test_instructions.py  test_lexer.py  test_object.py  test_parser.py  test_precedences.py  test_symbol_table.py  test_virtual_machine.py  utils_for_tests.py
(+156 files in other folders)
